# Smoke

./: .gitignore  DESIGN.md  README.md  build-linux.sh  dev-linux.sh  package-lock.json  package.json  version-change
.github/workflows/: auto-release.yml  ci.yml  release.yml
scripts/: install-deps-fedora.sh  run-release.sh  verify-smoke-install.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: smoke.desktop
src-tauri/src/: auth.rs  glib_quiet.rs  identity.rs  lib.rs  main.rs  path_safety.rs  paths.rs  secrets.rs  token_store.rs  webkit_linux.rs
src-tauri/src/git/: bootstrap.rs  branch_tracking.rs  branches.rs  cli_sync.rs  config.rs  conflicts.rs  credentials.rs  diff.rs  history.rs  history_actions.rs  mod.rs  rebase.rs  remote.rs  staging.rs  stash.rs  sync.rs  tags.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/components/: AboutDialog.tsx  AnimatedTabPanels.tsx  AppGate.tsx  AppLogo.tsx  AppMenubar.tsx  AppSettingsDialog.tsx  AuthorAvatar.tsx  BetaBanner.tsx  BranchPickerDialog.tsx  BranchSelector.tsx  (+32 more)
src/lib/: active-repo.ts  app-dialog.ts  app-meta.ts  app-runtime.ts  app-settings.ts  auth.ts  avatar-url.ts  branch-sync.ts  build-commit-message.ts  build-hunk-patch.ts  collect-secrets.ts  create-github-repo.ts  diff-highlight.ts  github-api.ts  github-pulls.ts  github-repos.ts  github-url.ts  github-user.ts  menu-shortcuts.ts  open-external.ts  open-repo.ts  relative-time.ts  repo-fingerprint.ts  tauri-auth.ts  theme.ts  use-branch-picker.ts
(+10 files in other folders)
