[package]
name = "smoke"
version = "0.0.1"
description = "Smoke — Git client for Linux"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true

[lib]
name = "smoke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
git2 = { version = "0.21.0", features = ["vendored-libgit2", "vendored-openssl", "https"] }
regex = "1.12.3"
dirs = "6.0.0"
toml = "1.0.7"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.3", features = ["json", "form"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
open = "5.3.3"
md5 = "0.7"
glib = { version = "0.18", default-features = false }
